<resources>
    <string name="app_name">Cat Message 8</string>
    <string name="settings">Settings</string>

    <!-- about dialog -->
    <string name="about">About</string>
    <string name="author">Alex Tetervak, Sheridan College, 2019</string>

    <string name="title_activity_output">Output Activity</string>

    <!-- radio button labels / output strings -->
    <string name="cat_purr">Purr</string>
    <string name="cat_mew">Mew</string>
    <string name="cat_hiss">Hiss</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <string name="select_message">Select a message</string>
    <string name="message_label">Received message</string>
    <string name="undefined">Undefined</string>

    <!-- button labels -->
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="back">Back</string>

    <!-- the activity labels -->
    <string name="main_activity">Main Activity</string>
    <string name="output_activity">Output Activity</string>

    <!-- the floating label -->
    <string name="sheridan">Sheridan, 2019</string>

    <!-- the activity & fragment labels -->
    <string name="input_fragment_label">Input Fragment</string>
    <string name="output_fragment_label">Output Fragment</string>
    <string name="main_activity_label">Main Activity</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="message_text">Message Text</string>
    <string name="delivery_speed">Delivery Speed</string>
    <string name="default_message_title">Default Message</string>
    <string name="urgent_key">urgent</string>
    <string name="message_text_key">message_text</string>
    <string name="default_message_value">purr</string>

</resources>
